modified: index.html modified: framework.css

--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
     <section class="services" id="service">
         <div class="container">
             <div class="title text-center">
+                <article id="service">
                 <h6>The Reason</h6>
                 <h1 class="title-blue">Why Choose Us</h1>
             </div>
@@ -223,6 +224,7 @@
                                 Good clothing brands understand the importance of providing a positive customer experience. 
                                 By offering excellent service, listening to customer feedback, and creating positive interactions, clothing brands can build strong relationships with customers.
                                 <a href="index.html" class="btn btn-primary">Home</a>
+                            </article>
                             </div>
                         </div>
                     </div>
