renamed:    assets/css/bootstrap.css -> assets/css/framework.css modified:   index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Plugins Stylesheets -->
     <link rel="stylesheet" href="assets/css/loader/loaders.css">
     <link rel="stylesheet" href="assets/css/font-awesome/font-awesome.css">
-    <link rel="stylesheet" href="assets/css/bootstrap.css">
+    <link rel="stylesheet" href="assets/css/framework.css">
     <link rel="stylesheet" href="assets/css/aos/aos.css">
     <link rel="stylesheet" href="assets/css/swiper/swiper.css">
     <link rel="stylesheet" href="assets/css/lightgallery.min.css">
