--- a/index.html
+++ b/index.html
@@ -46,21 +46,21 @@
                         <li><a href="https://www.linkedin.com/in/ridwan-rahmat-16721a220/"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                     
-                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" img src="assets\images\login.jpg">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" img src="assets\images\login.jpg">
                     login</a>
                   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                     <form class="px-4 py-3">
                       <div class="form-group">
-                        <label for="email">Email</label>
                         <input type="email" class="form-control" id="email" placeholder="Email">
+                        <style></style>
                       </div>
                       <div class="form-group">
-                        <label for="password">Password</label>
                         <input type="password" class="form-control" id="password" placeholder="Password">
                       </div>
                       <button type="submit" class="btn btn-primary">Masuk</button>
                       <div class="dropdown-divider"></div>
                       <a class="dropdown-item" href="#">Lupa Password?</a>
+                      <a class="dropdown-item" href="register.html"><br>Register</a>
                     </form>
                   </div>
                 </nav>
@@ -79,7 +79,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#service">Services</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#supremacy">Supremacy</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
                         <li class="nav-item"><a class="nav-link" href="#shop">Shop</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact Us</a></li>
@@ -109,7 +109,7 @@
                                 <div class="single-slide">
                                     <h1 data-aos="fade-right" data-aos-delay="200">Rising King<br> Find Your Own Style
                                     </h1>
-                                    <p data-aos="fade-right" data-aos-delay="600">"Menghadirkan Gaya yang Mengubah Cara Anda Melihat Diri Sendiri dan Dunia di Sekitar Anda.<br>
+                                    <p data-aos="fade-right" data-aos-delay="600">"Menghadirkan Gaya yang Mengubah Cara Anda Melihat Diri Sendiri dan Dunia <br>di Sekitar Anda.<br>
                                         Setiap Pakaian Kami Didesain dengan Rasa Percaya Diri, Kebebasan, dan 
                                         <br>Semangat Untuk Mewujudkan Impian dan Menjadi Versi Terbaik dari Diri Anda!"
                                     </p>
@@ -123,7 +123,7 @@
                                 <div class="single-slide">
                                     <h1 data-aos="fade-right" data-aos-delay="200">Rising King<br> Find Your Own Style
                                     </h1>
-                                    <p data-aos="fade-right" data-aos-delay="600">"Bringing a Transformational Style that Alters the Way You See Yourself and the World Around You.<br>
+                                    <p data-aos="fade-right" data-aos-delay="600">"Bringing a Transformational Style that Alters the Way You See Yourself and <br>the World Around You.<br>
                                         Each of Our Garments is Designed with Confidence, Freedom, and 
                                         <br>the Spirit to Fulfill Dreams and Become the Best Version of Yourself!"
                                     </p>
@@ -165,7 +165,7 @@
     <section class="services" id="service">
         <div class="container">
             <div class="title text-center">
-                <article id="service">
+                <article id="supremacy">
                 <h6>The Reason</h6>
                 <h1 class="title-blue">Why Choose Us</h1>
             </div>
