--- a/index.html
+++ b/index.html
@@ -46,20 +46,19 @@
                         <li><a href="https://www.linkedin.com/in/ridwan-rahmat-16721a220/"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                     
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" img src="assets\images\login.jpg">
-                    login</a>
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sign In / Register</a>
                   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                     <form class="px-4 py-3">
-                      <div class="form-group">
-                        <input type="email" class="form-control" id="email" placeholder="Email">
+                      <div class="login-form">
+                        <input type="email" class="form-control" id="email" placeholder="Email" >
                         <style></style>
                       </div>
-                      <div class="form-group">
+                      <div class="login-form">
                         <input type="password" class="form-control" id="password" placeholder="Password">
-                      </div>
+                      </div><br>
                       <button type="submit" class="btn btn-primary">Masuk</button>
                       <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">Lupa Password?</a>
+                      <a class="dropdown-item" href="lupasandi.html">Lupa Password?</a>
                       <a class="dropdown-item" href="register.html"><br>Register</a>
                     </form>
                   </div>
@@ -595,77 +594,17 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-xl-3">
-                        <div class="single-widget twitter-widget" data-aos="fade-up" data-aos-delay="200">
-                            <h6 class="widget-tiltle">Fresh Tweets</h6>
-                            <div class="media">
-                                <i class="fa fa-twitter"></i>
-                                <div class="media-body ml-3">
-                                    <h6><a href="#">@Themes,</a> Html Version Out Now</h6>
-                                    <span>10 Mins Ago</span>
-                                </div>
-                            </div>
-                            <div class="media">
-                                <i class="fa fa-twitter"></i>
-                                <div class="media-body ml-3">
-                                    <h6><a href="#">@Envato,</a> the best selling item of the day!</h6>
-                                    <span>20 Mins Ago</span>
-                                </div>
-                            </div>
-                            <div class="media">
-                                <i class="fa fa-twitter"></i>
-                                <div class="media-body ml-3">
-                                    <h6><a href="#">@Collis,</a> We Planned to Update the Enavto Author Payment Method
-                                        Soon!</h6>
-                                    <span>10 Mins Ago</span>
-                                </div>
-                            </div>
-                            <div class="media">
-                                <i class="fa fa-twitter"></i>
-                                <div class="media-body ml-3">
-                                    <h6><a href="#">@SteelThemes,</a> Html Version Out Now</h6>
-                                    <span>15 Mins Ago</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-xl-3">
+                    <div class="col-md-8 col-xl-6">
                         <div class="single-widget recent-post-widget" data-aos="fade-up" data-aos-delay="400">
-                            <h6 class="widget-tiltle">Latest Updates</h6>
+                            <h6 class="widget-tiltle">Our Contact</h6>
                             <div class="media">
-                                <a class="rcnt-img" href="#"><img src="assets/images/rcnt-post1.png"
-                                        alt="Recent Post"></a>
-                                <div class="media-body ml-3">
-                                    <h6><a href="#">An engaging</a></h6>
-                                    <p><i class="fa fa-user"></i>Mano <i class="fa fa-eye"></i> 202 Views</p>
-                                </div>
-                            </div>
-                            <div class="media">
-                                <a class="rcnt-img" href="#"><img src="assets/images/rcnt-post2.png"
-                                        alt="Recent Post"></a>
-                                <div class="media-body ml-3">
-                                    <h6><a href="#">Statistics and analysis. The key to succes.</a></h6>
-                                    <p><i class="fa fa-user"></i>Rosias <i class="fa fa-eye"></i> 20 Views</p>
-                                </div>
-                            </div>
-                            <div class="media">
-                                <a class="rcnt-img" href="#"><img src="assets/images/rcnt-post3.png"
-                                        alt="Recent Post"></a>
-                                <div class="media-body ml-3">
-                                    <h6><a href="#">Envato Meeting turns into a photoshooting.</a></h6>
-                                    <p><i class="fa fa-user"></i>Kien <i class="fa fa-eye"></i> 74 Views</p>
-                                </div>
-                            </div>
-                            <div class="media">
-                                <a class="rcnt-img" href="#"><img src="assets/images/rcnt-post4.png"
-                                        alt="Recent Post"></a>
-                                <div class="media-body ml-3">
-                                    <h6><a href="#">An engaging embedded the video posts</a></h6>
-                                    <p><i class="fa fa-user"></i>Robert <i class="fa fa-eye"></i> 48 Views</p>
+                                <div class="text-center">
+                                    <a class="advr-img" href="#"><img src="assets\images\advr.jpg" alt="advr-img Post"></a>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>     
+                    <br>               
                     <div class="col-md-6 col-xl-3">
                         <div class="single-widget tags-widget" data-aos="fade-up" data-aos-delay="800">
                             <h6 class="widget-tiltle">Popular Tags</h6>
