modified:   assets/css/style.css new file:   assets/images/Red and Blue Abstract Background Image.jpg deleted:    assets/images/featured-img1.jpg deleted:    assets/images/featured-img2.jpg deleted:    assets/images/gallery1.jpg deleted:    assets/images/gallery3.jpg deleted:    assets/images/post1.jpg deleted:    assets/images/post2.jpg deleted:    assets/images/post3.jpg deleted:    assets/images/post4.jpg deleted:    assets/images/rcnt-post1.png deleted:    assets/images/rcnt-post2.png deleted:    assets/images/rcnt-post3.png deleted:    assets/images/test-clients-bg.png deleted:    assets/images/test1.png deleted:    assets/images/universe.jpeg modified:   index.html

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                     <form class="px-4 py-3">
                       <div class="login-form">
-                        <input type="email" class="form-control" id="email" placeholder="Email" >
+                        <input style="color: black;" type="email" class="form-control" id="email" placeholder="Email" >
                         <style></style>
                       </div>
                       <div class="login-form">
-                        <input type="password" class="form-control" id="password" placeholder="Password">
+                        <input style="color: black;" type="password" class="form-control" id="password" placeholder="Password">
                       </div><br>
                       <button type="submit" class="btn btn-primary">Masuk</button>
                       <div class="dropdown-divider"></div>
