--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </nav>
             </div>
             <nav class="navbar navbar-expand-md navbar-light">
-                <a class="navbar-brand" href="index.html"><img src="assets\images\logorisingking.png" alt="rlogo"></a>
+                <a class="navbar-brand" href="index.html"><img src="assets\images\logo33r.png" alt="rlogo"></a>
                 <div class="group d-flex align-items-center">
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
