--- a/register.html
+++ b/register.html
@@ -53,6 +53,7 @@
       border: none;
       border-radius: 4px;
       cursor: pointer;
+
     }
 
     p {
@@ -67,8 +68,16 @@
       max-width: 100%;
       max-height: 100%;
     }
+    .google-button img{
+      position: absolute;
+      top: 32.5%;
+      left: 43.5%;
+    }
     a:hover{
       color: #417bf0;
+    }
+    a{
+      text-decoration: none;
     }
   </style>
 </head>
@@ -78,6 +87,7 @@
     <h1>Registrasi Account</h1>
     <h2>Buat akun untuk melihat berbagai katalog baru dari kami Rising King</h2>
     <div class="google-button">
+      <img src="assets\images\google logo.png" alt="Gambar Masuk dengan Google">
         <button type="submit"><a href="https://accounts.google.com/v3/signin/identifier?dsh=S302335514:1684423559079735&authuser=0&continue=https://myaccount.google.com/&ec=GAlAwAE&hl=in&service=accountsettings&flowName=GlifWebSignIn&flowEntry=AddSession">Masuk dengan Akun Google</a></button>
       </div>
       <p>---------- ATAU ----------</p>
