modified:   lupasandi.html modified:   register.html

--- a/register.html
+++ b/register.html
@@ -74,10 +74,12 @@
       left: 43.5%;
     }
     a:hover{
+      font-weight: bold;
       color: #417bf0;
     }
     a{
       text-decoration: none;
+      color: #375e8e;
     }
   </style>
 </head>
@@ -98,7 +100,9 @@
       <input type="password" name="kata_sandi" placeholder="Kata Sandi" required>
       <button type="submit">Daftar</button>
     </form>
+    <div class="a.container">
     <p>Sudah punya akun? <a href="index.html">Masuk</a></p>
+    </div>
   </div>
  
 
