--- a/lupasandi.html
+++ b/lupasandi.html
@@ -68,10 +68,12 @@
       max-height: 100%;
     }
     a:hover{
-      color: #417bf0;
+      font-weight: bold;
+      color: #f04141;
     }
     a{
       text-decoration: none;
+      color: #f04141;
     }
   </style>
 </head>
