--- a/register.html
+++ b/register.html
@@ -98,6 +98,12 @@
       <input type="email" name="email" placeholder="Email" required>
       <input type="text" name="fa-phone" placeholder="+62..." required>
       <input type="password" name="kata_sandi" placeholder="Kata Sandi" required>
+      <div class="gender">
+        <input type="radio" value="None" id="male" name="gender" checked/>
+        <label for="male" class="radio" chec>Male</label>
+        <input type="radio" value="None" id="female" name="gender" />
+        <label for="female" class="radio">Female</label>
+       </div><br>
       <button type="submit">Daftar</button>
     </form>
     <div class="a.container">
