modified:   index.html modified:   register.html

--- a/register.html
+++ b/register.html
@@ -61,6 +61,7 @@
     }
 
     .container img {
+      display: flex;
       position: absolute;
       top: 8%;
       left: 50%;
@@ -69,6 +70,7 @@
       max-height: 100%;
     }
     .google-button img{
+      display: flex;
       position: absolute;
       top: 32.5%;
       left: 43.5%;
