--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                         <li><a href="https://www.facebook.com/profile.php?id=100007681698675" target="_blank"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="https://www.instagram.com/ridwanrahmat_/"><i class="fa fa-instagram"></i></a></li>
                         <li><a href="https://twitter.com/rid_wine"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="https://github.com/ridwanrahmat" target="_blank"><i class="fa fa-github"  target="_blank"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/ridwan-rahmat-16721a220/"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                     
@@ -629,11 +630,11 @@
                             </form>
                             <p>We respect your privacy</p>
                             <ul class="nav social-nav">
-                                <li><a href="https://www.facebook.com/profile.php?id=100007681698675" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                                <li><a href="https://twitter.com/rid_wine"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                                <li><a href="https://www.linkedin.com/in/ridwan-rahmat-16721a220/"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="https://id-id.facebook.com/login/device-based/regular/login/?login_attempt=1" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="https://accounts.google.com/v3/signin/identifier?dsh=S302335514:1684423559079735&authuser=0&continue=https://myaccount.google.com/&ec=GAlAwAE&hl=in&service=accountsettings&flowName=GlifWebSignIn&flowEntry=AddSession"><i class="fa fa-google-plus"></i></a></li>
+                                <li><a href="https://twitter.com/i/flow/login"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="https://github.com/login" target="_blank"><i class="fa fa-github"  target="_blank"></i></a></li>
+                                <li><a href="https://www.linkedin.com/login/in"><i class="fa fa-linkedin"></i></a></li>
                             </ul>
                         </div>
                     </div>
